--- a/css/style/authorization.css
+++ b/css/style/authorization.css
@@ -9,7 +9,7 @@ body {
   position: relative;
   max-width: 400px;
   height: 450;
-  margin: 0 auto;
+  margin: 10% auto;
   padding: 40px;
   background: transparent;
   border: 2px solid rgba(255,255,255,0.5);
@@ -22,7 +22,7 @@ body {
 .login-form h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: #333;
+  color: #ffffff;
 }
 
 .login-form .form-group {
@@ -31,9 +31,8 @@ body {
 
 .login-form .form-group label {
   display: block;
-  font-weight: bold;
   margin-bottom: 10px;
-  color: #555;
+  color: #ffffff;
 }
 
 .login-form .form-group input[type="text"],
@@ -41,17 +40,55 @@ body {
 .login-form .form-group input[type="submit"] {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  color: #fff;
 }
 
 .login-form .form-group input[type="submit"] {
-  background-color: #007BFF;
-  color: white;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  border-radius: 40px;
   border: none;
+  outline: none;
   cursor: pointer;
+  font-size: 1em;
+  font-weight: 600;
 }
 
 .login-form .form-group input[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: #aeaeae;
+}
+
+.noaccount {
+  font-size: .9em;
+  color: white;
+  text-align: center;
+  margin: 25px 0 10px;
+}
+
+.noaccount p a{
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+}
+
+.noaccount a:visited{
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+}
+
+.noaccount a:hover{
+  text-decoration: underline;
+}
+
+.inputbox{
+  background: none;
+  border: none;
+  position: relative;
+  width: 310;
+  border-bottom: 2px solid #fff;
+}
+
+.autorization{
+  font-size: 1.5em;
 }
