--- a/css/style/regstyle.css
+++ b/css/style/regstyle.css
@@ -5,19 +5,23 @@ body {
 }
 /* Стили для формы регистрации */
 .registration-form {
-    max-width: 450px;
-    margin: 0 auto;
+    position: relative;
+    max-width: 400px;
+    height: 450;
+    margin: 10% auto;
     padding: 40px;
-    background-color: #f2f2f2;
-    border: 1px solid #ccc;
-    border-radius: 10px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255,0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 6;
   }
   
   .registration-form h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #333;
+    color: #ffffff;
   }
   
   .form-group {
@@ -26,27 +30,71 @@ body {
   
   .form-group label {
     display: block;
-    font-weight: bold;
     margin-bottom: 10px;
-    color: #555;
+    color: #ffffff;
   }
   
-  .form-group input[type="text"],
-  .form-group input[type="password"],
-  .form-group input[type="submit"] {
+  .form-group input[type="text"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    color: #fff;
   }
-  
-  .form-group input[type="submit"] {
-    background-color: #007BFF;
-    color: white;
+
+  .form-group input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    color: #fff;
+  }
+
+  .btnreg input[type="submit"] {
+    width: 100%;
+    height: 35px;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    border-radius: 40px;
     border: none;
+    outline: none;
     cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
+  }
+
+  .btnreg input[type="submit"]:hover {
+    background-color: #aeaeae;
+  }
+
+  .yesaccount {
+    font-size: .9em;
+    color: white;
+    text-align: center;
+    margin: 25px 0 10px;
   }
   
-  .form-group input[type="submit"]:hover {
-    background-color: #0056b3;
+  .yesaccount p a{
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
   }
+  
+  .yesaccount a:visited{
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
+  }
+  
+  .yesaccount a:hover{
+    text-decoration: underline;
+  }
+
+  .inputbox{
+    background: none;
+    border: none;
+    position: relative;
+    width: 310;
+    border-bottom: 2px solid #fff;
+  }
+
+  .registration{
+    font-size: 1.5em;
+  }
+  
