--- a/css/style/regstyle.css
+++ b/css/style/regstyle.css
@@ -86,6 +86,10 @@ body {
     text-decoration: underline;
   }
 
+  .yesaccount1 {
+    font-weight: 500;
+  }
+
   .inputbox{
     background: none;
     border: none;
@@ -96,5 +100,6 @@ body {
 
   .registration{
     font-size: 1.5em;
+    font-weight: 700;
   }
   
