--- a/css/style/notes.css
+++ b/css/style/notes.css
@@ -31,7 +31,6 @@ body {
 
 label {
     display: block;
-    font-weight: bold;
     margin-bottom: 5px;
 }
 
@@ -54,6 +53,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: 600;
 }
 
 button:hover {
@@ -65,6 +65,7 @@ button:hover {
     margin: 10px;
     font-size: 1.5em;
     color: white;
+    font-weight: 500;
 }
 
 .note-form{
